--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
-body {
+containerbody {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f0f0f0;
     color: #333;
+}
+
+.container{
+    display: "flex";
+    flex-direction: "row";
 }
 
 header {
