--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,10 @@ nav ul li a:hover {
 .container {
     width: 90%;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1200px; 
+    display:flex;
+    flex-wrap:wrap ;
+    flex-direction:row
 }
 
 main {
