--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ nav ul li a:hover {
     margin: 0 auto;
     max-width: 1200px; 
 } 
-.container-skills {
+.skills {
     width: 90%;
     margin: 0 auto;
     max-width: 1200px; 
