--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@ nav ul li a:hover {
     max-width: 1200px; 
     display:flex;
     flex-wrap:wrap ;
-    flex-direction:row
+    flex-direction:row;
+    margin-right:10px
 }
 
 main {
